--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,11 @@
-<h1 class="text-3xl font-bold underline">hello from {{title}}</h1>
+<app-header></app-header>
+
+<div class="container mt-6">
+  <h2 class="text-3xl font-bold underline">hello from {{title}}</h2>
+  <ul>
+    @for (product of products; track products.id) 
+    {
+      <li>{{product.name}}</li>
+    }
+  </ul>
+</div>
